--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 astroid==2.4.2
 bcrypt==3.1.7
+certifi==2020.6.20
 cffi==1.14.0
+chardet==3.0.4
 colorama==0.4.3
 cryptography==2.9.2
+idna==2.8
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+notify-run==0.0.13
 paramiko==2.7.1
 pycparser==2.20
 pylint==2.5.3
 PyNaCl==1.4.0
+PyQRCode==1.2.1
+requests==2.22.0
 six==1.15.0
 toml==0.10.1
 typed-ast==1.4.1
+urllib3==1.25.9
 wrapt==1.12.1
